2003-10-12  Araki Ken  <arakiken@users.sf.net>

	* Minor cleanups.

2003-10-12  Araki Ken  <arakiken@users.sf.net>
	* mlmenu/main.c: ~/.mlterm/menu couldn't be loaded correctly. Fixed.

2003-10-11  Araki Ken  <arakiken@users.sf.net>

	* Renamed font_custom and color_custom to font_config and font_custom.

	* Added x_main_config.[ch] pulled out from x_term_manager.c

2003-10-11  Araki Ken  <arakiken@users.sf.net>

	* After options saved by 5382 or 5383 protocol, new terminals start
	  with the new options.

2003-10-11  Araki Ken  <arakiken@users.sf.net>

	* Added -&,--borderless,borderless option.

	* Added tool/mlmenu.

2003-10-05  Araki Ken  <arakiken@users.sf.net>

	* 2.8.0 released.
	  (tag "rel-2_8_0")

	* Visual bel didn't work as expected. Fixed.

2003-10-04  Araki Ken  <arakiken@users.sf.net>

	* Added --with-tools and --with-scrollbars description to README and
	  README.ja.

2003-10-01  Araki Ken  <arakiken@users.sf.net>

	* Modified some documents.

2003-10-01  MINAMI Hirokazu  <minami@lissie.chem.s.u-tokyo.ac.jp>

	* etc/*aafont: UCS2->UCS4

2003-09-30  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c(window_exposed): Consider vertical mode.

2003-09-30  Araki Ken  <arakiken@users.sf.net>

	* x_sb_view_factory.c: Memory leaked if specified scrollbar not found and
	  "simple" scrollbar used. Fixed.

	* x_sb_view_factory.c: Removed stuff about lib_ref_table.

	* ml_char.c(ml_char_move): Use ml_char_init instead of memset.

2003-09-29  Araki Ken  <arakiken@users.sf.net>

	* version.h: 2.8.0

	* mlconfig: "Font size (temporal)" changed to "Font size (temporary)".

2003-09-26  Araki Ken  <arakiken@users.sf.net>

	* Added font.ja and main.ja

2003-09-25  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c(draw_line): RTL lines shown incorrectly when variable fonts
	  used and region being selected.

2003-09-25  Araki Ken  <arakiken@users.sf.net>

	* ml_char.[ch]: Supported little endian machines in 64bit.

2003-09-21  Seiichi SATO <ssato@sh.rim.or.jp>
