@@ -11,7 +11,7 @@
 #define  REVISION	0
 #define  PATCH_LEVEL	0
 
-#if  0
+#if  1
 #define  CVS_REVISION   "pre/cvs-@CVS_REVISION@"
 #else
 #define  CVS_REVISION   ""
